--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "just-random-integer": "^4.0.0",
+    "react-router-dom": "^5",
     "uniqid": "^5.3.0"
   },
   "devDependencies": {
